[metadata]
name = massql
author = Mingxun Wang
author_email = mwang87@gmail.com
description =  Mass spectrometry query language python implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwang87/MassQueryLanguage
project_urls =
    Documentation = https://mwang87.github.io/MassQueryLanguage_Documentation/
    Bug Tracker = https://github.com/mwang87/MassQueryLanguage/issues
license = MIT
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT Software License
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires = parse_requirements('requirements.txt', session='hack')
