[package]
name = "massql-parser"
version = "0.1.0"
edition = "2021"
description = "MassQL parser — Rust port of msql_parser.py"
license = "MIT"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde_json = "1"
thiserror = "1"
ryu = "1"
once_cell = "1"

[dev-dependencies]
walkdir = "2"
md5 = "0.7"
serde = "1"
